NIFI-14459: Creating processor to update box metadata template